k8s/zipkin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin:latest
          ports:
            - containerPort: 9411

          readinessProbe:
            tcpSocket:
              port: 9411
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2

          livenessProbe:
            tcpSocket:
              port: 9411
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
