k8s/zipkin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    app: zipkin
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 9411
      targetPort: 9411
  selector:
    app: zipkin
